--- a/styles/index.css
+++ b/styles/index.css
@@ -48,6 +48,96 @@ nav .btn-1 {
     color: #ffffff;
     padding: 12px 16px;
 }
-.btn-1 :hover {
+.btn-1:hover {
+    background-color: #187940;
+    box-shadow: 0 0 8px #187940;
+}
 
+/* hero-section */
+
+.container {
+    min-height: 674px;
+    text-align: center;
+    background-image: url('/assets/hero-bg2.png');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .container-secondary {
+    max-width: 1360px;
+    padding: 70px 120px 134px 120px;
+    text-align: center;
+    box-sizing: border-box;
+}
+.container-1st-text {
+    margin: 0 auto;
+    border-radius: 25px;
+    background-color: #ffffff;
+    width: 229px;
+    height: 36px;
+    text-align: center;
+    padding: 8px 12px ;
+    color: #30B868;
+    font-size: 16px;
+    font-weight: 500;
+    gap: 6px;
+    display: flex;
+    justify-content: center;
+}
+.dot-png {
+    padding-top: 2px;
+}
+.container-2nd-text {
+    padding:16px;
+    box-sizing: border-box;
+
+}
+
+.container-2nd-text h1 {
+    font-size:xxx-large;
+}
+
+.container-2nd-text p {
+    color: #ffffff;
+    font-size: 18px;
+    text-align: center;
+    line-height: 20px;
+    padding-top: 16px;
+}
+
+.btn-hero{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+.btn-hero .btn-hero1{
+    width: 251px;
+    height: 52px;
+    font-size: 16px;
+    color: #ffffff;
+    border-radius: 4px;
+    border: none;
+    background-color: #30B868;
+}
+
+.btn-hero .btn-hero2{
+    width: 251px;
+    height: 52px;
+    font-size: 16px;
+    color: #ffffff;
+    border-radius: 4px;
+    border: 1px solid #ffffff;
+    background-color: #ffffff00;
+    
+}
+.btn-hero1:hover {
+    background-color: #187940;
+    box-shadow: 0 0 8px #ffffff;
+}
+.btn-hero2:hover {
+    /* background-color: #187940; */
+    box-shadow: 0 0 8px #ffffff;
 }
