--- a/styles/index.css
+++ b/styles/index.css
@@ -141,3 +141,63 @@ nav .btn-1 {
     /* background-color: #187940; */
     box-shadow: 0 0 8px #ffffff;
 }
+
+/* Card-section */
+
+#Card {
+    text-align: center;
+    background-color: #ffffff;
+}
+
+#Card .card-container{
+    width: 84%;
+    max-width: 1630px;
+    height: 300px;
+    margin: 0 auto;
+}
+.card-heading h2{
+    padding-top: 30px;
+    font-size: 48px;
+    font-weight: bold;
+    color: #001931;
+    padding-bottom: 16px;
+    margin: 0 auto;
+}
+.card-heading p{
+    font-size:16px;
+    color: #627382;
+    line-height: 20px;
+    margin: 0 auto;
+    padding-bottom: 40px;
+}
+.card-container .card-box {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    gap:24px;
+}
+.card-section {
+    padding: 24px 24px;
+    /* border: 1px solid black; */
+    max-width: 0 auto;
+    text-align: center;
+    border-radius: 8px;
+    box-shadow: 0px 0px 5px #0019313a;
+}
+.card-section img {
+    max-width: 80px;
+    max-height: 80px;
+    background-color: #f95555;
+    border-radius: 50%;
+    padding: 10px 10px;
+}
+.card-section h3 {
+    font-size: 24px;
+    padding: 16px 0;
+    font-weight: 600;
+}
+.card-section p{
+    font-size: 16px;
+    line-height: 20px;
+    color: #627382;
+}
