--- a/styles/index.css
+++ b/styles/index.css
@@ -147,6 +147,7 @@ nav .btn-1 {
 #Card {
     text-align: center;
     background-color: #ffffff;
+    padding: 0 120px;
 }
 
 #Card .card-container{
@@ -176,6 +177,8 @@ nav .btn-1 {
     align-items: stretch;
     gap:24px;
 }
+/* Card-container-Section */
+
 .card-section {
     padding: 24px 24px;
     /* border: 1px solid black; */
@@ -200,4 +203,139 @@ nav .btn-1 {
     font-size: 16px;
     line-height: 20px;
     color: #627382;
+}
+
+/* Brain-Section */
+
+#brain-section {
+    margin: 120px;
+    text-align: center;
+}
+.brain-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* gap: 60px; */
+    width: 90%;
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 120px 0;
+}
+.brain-main-img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.brain-text {
+    text-align: left;
+    padding-right:inherit;
+}
+.brain-text h5 {
+    font-size: 16px;
+    color: #30B868;
+    margin-bottom: 16px;
+}
+.brain-text h1 {
+    font-size: 48px;
+    margin-bottom: 16px;
+    color: #001931;
+    font-weight: bold;
+}
+.brain-header p {
+    font-size: 16px;
+    color: #627382;
+    margin-bottom: 40px;
+}
+.features-list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.features-item {
+    gap: 16px;
+}
+.feature-text {
+    text-align: center;
+}
+
+/* Content-Section */
+/* Center the container on the page */
+#content-box {
+    display: flex;
+    justify-content: center;
+    padding-top: 0;
+    padding-right: 120px;
+    padding-left: 120px;
+    padding-bottom: 120px ;
+    background-color: #ffffff;
+}
+
+.content-box-2 {
+    background-color: #f5f4f0;
+    max-width: 1360px;
+    width: 100%;
+    padding: 80px 40px;
+    text-align: center;
+    border-radius: 8px;
+}
+.content-text h5{
+    font-size: 40px;
+    font-weight: bold;
+    padding-bottom: 16px;
+}
+.content-text p{
+    font-size: 16;
+    color: #627382;
+    margin-bottom: 24px;
+}
+.btn-4 {
+    width: 194px;
+    height: 52px;
+    border-radius: 4px;
+    border: none;
+    background-color: #30B868;
+    padding: 12px 16px;
+    margin-bottom: 16px;
+}
+.btn-4 a{
+    text-decoration: none;
+    color: #ffffff;
+}
+.content-btn-4 p{
+    font-size: 16;
+    color: #627382;
+    margin-bottom: 24px;
+}
+
+/* footer-section */
+footer {
+    padding-top: 120px;
+    padding-left: 120px;
+    padding-right: 120px;
+    padding-bottom: 30px;
+    background-color: #001931;
+    
+}
+.footer-1 {
+    display: flex;
+    justify-content: space-between;
+    /* gap: auto; */
+}
+.footer-1 h5 {
+    font-size: 20px;
+    color: #ffffff;
+    margin-bottom: 16px;
+}
+.footer-1 img {
+    width: 139px;
+    height: 60px;
+}
+.footer-logo {
+    color:#ffffff
+}
+.copy p {
+    color: #ffffff;
+    text-align: center;
+    font-size: 16px;
 }
