Aded and Fixed Footer HR section

--- a/styles/index.css
+++ b/styles/index.css
@@ -367,6 +367,9 @@ footer {
 .footer-logo {
     color:#ffffff
 }
+.copy {
+    text-align: center;
+}
 .copy p {
     color: #ffffff;
     text-align: center;
