This Full webPage was built on 1920p Display size so use browser zoom 100% and 1920p display res to get the perfect view also Fixed Margin Height in CSS Styles commit

--- a/styles/index.css
+++ b/styles/index.css
@@ -231,6 +231,7 @@ nav .btn-1 {
 #brain-section {
     width: 100%;
     text-align: center;
+    margin-top: 120px;
     padding-top: 120px;
     padding-bottom: 120px;
     padding-left: 120px;
